@@ -27,27 +27,34 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>${exec-maven.version}</version>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <mainClass>com.ecwid.dev.deep.copy.demo.Demo</mainClass>
+            </manifest>
+            <manifestEntries>
+              <Add-Opens> java.base/java.util 
+                 java.base/java.lang
+              </Add-Opens>
+            </manifestEntries>
+          </archive>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+          <finalName>demo</finalName>
+          <appendAssemblyId>false</appendAssemblyId>
+        </configuration>
         <executions>
           <execution>
+            <id>make-assembly</id> <!-- this is used for inheritance merges -->
+            <phase>package</phase> <!-- bind to the packaging phase -->
             <goals>
-              <goal>exec</goal>
+              <goal>single</goal>
             </goals>
           </execution>
         </executions>
-        <configuration>
-          <executable>java</executable>
-          <arguments>
-            <argument>--add-opens=java.base/java.util=${lib.module.name}</argument>
-            <argument>--add-opens=java.base/java.lang=${lib.module.name}</argument>
-            <argument>-p</argument>
-            <argument>${project.build.directory}/classes;</argument>
-            <argument>-m</argument>
-            <argument>demo/com.ecwid.dev.deep.copy.demo.Demo</argument>
-          </arguments>
-        </configuration>
       </plugin>
     </plugins>
   </build>
